--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@ body {
 a {
     text-decoration: none;
 }
+
+.container {
+    width: 1352px;
+    margin: 0 auto;
+}
+
 header {
     width: 100vw;
     height: 100vh;
@@ -59,9 +65,7 @@ p {
     box-shadow: 0px 3px 6px var(--color-primary-shadow);
 }
 
-.container {
-    width: 1352px;
-    margin: 0 auto;
+.top-menu .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -125,3 +129,33 @@ a.logo {
 .opening-section button::first-letter {
     text-transform: capitalize;
 }
+
+.statistics {
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.statistics-small-header {
+    font-family: var(--font-headers);
+    font-size: 36px;
+    line-height: 42px;
+    color: var(--color-black);
+    padding: 100px 0;
+}
+
+.statistics-info {
+    display: flex;
+    justify-content:space-between;
+}
+
+div.number {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 90px;
+}
+
+
