--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,8 @@ a.logo {
 
 
 /* styles Section Pricing */
+
+
 .pricing .container {
     display: flex;
     flex-direction: column;
@@ -463,6 +465,7 @@ a.logo {
 
 .pricing-professional .btn {
     background: var(--color-primary);
+    bottom: -40px;
 }
 
 .pricing-premium .btn {
@@ -471,5 +474,29 @@ a.logo {
 
 .pricing-professional {
     width: 405px;
+    height: 500px;
     box-shadow: 5px 10px 27px var(--color-primary-shadow);
+}
+
+
+/* styles Section Contact */
+
+
+.contact .container {
+    margin-top: 155px;
+    max-width: 896px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.contact-info p {
+    color: var(--color-grey);
+    font-weight: 700;
 }
