--- a/css/style.css
+++ b/css/style.css
@@ -582,7 +582,7 @@ input::placeholder {
   }
   
   .checkbox input:checked + span {
-    background: url("../assets/Checkmark-1.svg");
+    background: url("../assets/Checkmark.svg") no-repeat;
     background-position: center;
   }
 
@@ -595,4 +595,37 @@ input::placeholder {
       border-radius: 35px;
       margin: 20px 0;
       align-self: flex-end;
+  }
+
+
+  /* styles Footer */
+  .container-footer {
+    
+    margin-top: 59px;
+    box-shadow: 0px -5px 40px var(--color-primary-shadow);
+  }
+
+  .container-footer .container {
+      height: 90px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; 
+  }
+
+  .logo-footer {
+      font-size: 26px;
+      font-weight: 300;
+      font-family: var(--font-headers);
+      color: var(--color-primary);
+  }
+
+  .copyrights {
+      font-size: 11px;
+      color: var(--color-grey);
+      font-family: var(--font-paragraphs);
+      margin-top: 6.5px;
+  }
+  
+  .social-media a img {
+      margin-left: 20px;
   }
