--- a/css/style.css
+++ b/css/style.css
@@ -104,28 +104,30 @@ a.logo {
 
 .opening-section h1 {
     text-transform: capitalize;
-    padding-top: 110px;
+    margin: 130px 0 20px 0;
 }
 
 
 .opening-section {
     height: calc(100vh - 70px);
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: url("../assets/Background.png") no-repeat;
-    background-position: bottom;
-    background-size: contain;
+}
+
+.opening-section img {
+    width: 100%;
+    height: auto;
 }
 
 .opening-section button a {
-  color:var(--color-white);
+    color:var(--color-white);
 }
 
 .opening-section button {
-    width: 440px;
-    height: 67px;
+    display: inline-block;
+    padding: 22px 157px;
     background: var(--color-primary);
     border-radius: var(--radius-big-btn);
     margin-top: 38px;
@@ -140,19 +142,21 @@ a.logo {
  /* styles Section Statistics  */
 
 
- .statistics .container {
-    min-height: 500px;
+ .statistics {
+    margin-top: 100px;
+    /* display: flex;
+    justify-content: center; */
 }
 
 .statistics-small-header {
-    margin-top: 100px;
     text-align: center;
+    /* padding-top: 100px;  */
 }
 
 .statistics-info {
     display: flex;
     justify-content:space-between;
-    margin: 100px auto;
+    margin: 100px auto 120px;
     max-width: 800px;
 }
 
@@ -491,11 +495,6 @@ a.logo {
     justify-content: space-between;
     align-items: flex-start;
     max-width: 896px;
-}
-
-.contact-info {
-    /* margin-right: 114px; */
-
 }
 
 .contact-info p {
